[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scenes/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/character_0000.png" type="Texture" id=2]
[ext_resource path="res://assets/player/character_0001.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11.75 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 13 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 15.0
height = 12.0

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )
dashHazardMask = 262144

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 2 )
animation = "idle"
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -10.25 )
shape = SubResource( 1 )

[node name="PickUpArea" type="Area2D" parent="."]
visible = false
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
position = Vector2( 0, -9 )
collision_layer = 0
collision_mask = 327680

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="DashArea" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2( -3.72529e-09, -9 )
rotation = -1.5756
shape = SubResource( 5 )
disabled = true
